Fix issues with default package and handle same classnames in multiple packages (#152)
Fixed:
- If a class that is checked by the structural tests is in the default package, an IndexOutOfBoundsException is thrown.
- If there are multiple classes with the same name in different packages, Ares throws an UnsupportedOperationException

Co-authored-by: JoejoeSt <johannes.stoehr@tum.de>
Co-authored-by: Christian Femers <c.femers@tum.de>